# MyPregnancy

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ML_README.md  Makefile  docker-compose.yml  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/core/: clients.py  password_hasher.py  security.py  settings.py  users_manager.py
backend/app/db/: db_config.py  db_schema.py  db_schema.py.backup
backend/app/ml/: health_v1.csv  train_risk_model.py
backend/app/shared/: s3_storage_interface.py  utils.py
backend/migrations/versions/: 0d59fb754647_extra_fields_for_mothers.py  12350cae9e97_added_edu_article_categories_table_.py  1c278de687c6_added_mcr_no_to_the_doctor_account_.py  262a59fb6c76_add_is_deleted_field_for_threads_and_.py  28e167d7af10_generalize_it_so_articles_can_be_.py  3b5356182b42_added_ingredients_field_to_recipe_table.py  409c46abfc56_added_table_to_save_grapejs_data_for_.py  58d852487dd9_initial_revision.py  5f114c8bd1d0_tables_or_menstrual_tracking_amend_.py  7024c39c2fac_refined_table_for_expo_push_tokens.py  76f45b7f8e28_added_specialisation_to_doctor_account_.py  7bbcb25faecf_cascade_behaviour_for_saved_edu_.py  7ce638f0ddd7_added_listed_at_field_to_products_table.py  9462a8355581_added_merchants_products_product_.py  9fd820d6be70_added_created_at_to_edu_articles.py  ab1433321f78_drop_unique_constraint_for_products_name.py  b8b12cf07f94_initial_schema.py  (+14 more)
backend/scripts/: list_users.py  seed_feedback_samples.py
backend/seed_data/: edu_articles.json
backend/tests/: conftest.py  test_account_creation_request_routes.py  test_appointment_routes.py  test_edu_article_routes.py  test_kick_tracker_routes.py
(+327 files in other folders)
